
Name: agdapaste
Version: 0.0.0.0
Build-Type: Simple
Cabal-Version: >= 1.2

Executable agdapaste
  Build-depends:  base 
                , safecopy
                , acid-state
                , yesod
                , process
                , skein
                , containers
                , mtl
                , yesod-static
                , text
                , yesod-form
                , time
                , polyparse
  Main-is: Main.hs
  Ghc-options: -threaded

